# simpqs

./: 2  CMakeLists.txt  CONFIGURATION.h  Makefile  README.md  SIMPQS.h  TODO.txt  factorizerQuick.c  factorizerQuick.h
debug/: checkRowsDuplicates.py  pythonRegex.py
factorization/: factorizerQuick.c  factorizerQuick.h
master/: masterMain.c
matrix/: matrix.c  matrix.h
parigpScriptAny/: ArrayQSshell.rtf  BsmoothAny.gp  polynomialCoeff
utils/: gmp_patch.c  gmp_patch.h  precomputations.c  precomputations.h  utils.c  utils.h
worker/: report.h  reports.c  sievingSIMPQS.c  sievingSIMPQS.h  workerMain.c
